Metabase setup complete (step 3 of roadmap); first 4 indicators built